row spacing fix

--- a/public/stylesheets/homepage-style.css
+++ b/public/stylesheets/homepage-style.css
@@ -303,7 +303,7 @@ select {
 
     display: grid;
     grid-template-columns: 20% 20% 20% 20% 20%;
-    grid-template-rows: 500px;
+    grid-template-rows: auto;
 }
 
 
